--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,16 +1,3 @@
-.header{
-    width: 100%;
-}
-
-[class*="col"]{
-    padding: 1rem;
-    background-color: aqua;
-    border: 2px solid #fff;
+.customDropdownTitle {
     color: white;
-    margin-left: 10px;
 }
-
-.navigation{
-    display: flex;
-    justify-content: flex-end;
-} 
