--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,5 +1,6 @@
 .footer{
-    height: 400px;
+    padding-top: 70px;
+    padding-bottom: 70px;
     background-color: #081315;
 }
 
@@ -18,4 +19,28 @@
 }
 .ulStyle li{
     padding-top: 15px;
+}
+
+.circle{
+    width: 30px;
+    height: 30px;
+    background-color:rgba(96, 96, 96, .5); 
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.heartCircle{
+    margin-top: 70px;
+    width: 40px;
+    height: 40px;
+    background-color: #005490; 
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heartCircle img{
+    width: 25px;
+    height: 20px;
 }
