--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
@@ -21,7 +22,6 @@ code {
 }
 
 /* Стили для мобильных устройств (например, ширина экрана меньше 768px) */
-/* Восстанавливаем горизонтальную прокрутку */
 @media (max-width: 768px) {
   body {
     overflow-x: hidden;
